@@ -45,7 +45,7 @@ public class Spell_Haste extends Spell
 	public void affectPhyStats(Physical affected, PhyStats affectableStats)
 	{
 		super.affectPhyStats(affected,affectableStats);
-		affectableStats.setSpeed(affectableStats.speed() * 2.0);
+		affectableStats.setSpeed(affectableStats.speed()+1.0+(CMath.div(getXLEVELLevel(invoker()),0.20)));
 	}
 
 
