@@ -642,12 +642,12 @@ a player with a Gaoler background can be a valuable member of a clan, or a \
 man-for-hire. 
 
 APPRENTICE=<CHARCLASS>\
-An Apprentice is a weak class that qualifies only for the games most common \
-skills, and may not go past level 5.  As an Apprentice, you are free to move \
-around in the game and learn some of the ropes before choosing a more \
+An Apprentice may not go past level 1, and qualifies only for the games most \
+common non-combat skills.  You are free to move around in the game like anyone \
+else, in order to learn some of the ropes before choosing a more \
 permanent career.  When you have decided which of the main classes to go \
 to, you may use the TRAIN command with an appropriate teacher to become \
-the class of your choosing.  If you cant find an appropriate teacher, \
+the class of your choosing.  If you can't find an appropriate teacher, \
 remember that a player of the proper class may be able to help you.  \
 Be sure to save yourself a training point for this purpose!
 
