@@ -1040,8 +1040,8 @@ casters allies.
 SPELL_HASTE=<ABILITY>\
 Usage    : CAST HASTE [TARGET NAME] \n\r\
 Example  : cast haste bob\n\r\
-This spell makes the target move much more quickly, effectively doubling \
-the targets number of attacks.
+This spell makes the target move more quickly, giving the target at least one \
+extra action or attack.
 
 SPELL_HEAT_METAL=<ABILITY>\
 Usage    : CAST "HEAT METAL" [TARGET NAME] \n\r\
