@@ -2283,3 +2283,4 @@ Special/Reserved Quest called holidays can be added to/modified on an area-by-ar
 14.IP service (CM1Server) -- a new, more formal-syntax mud interface -- see guides/CM1ServerGuide.html
 15.DISABLE flag: LOGOUTS (keeps characters in game world even if they log out)
 16.Another playable race: Duergar
+17.Apprentice can now play only level 1 -- we had too many people playing all the way to 5 and regretting it.
